--- a/Desktop/TP7_NFA040_MB/style.css
+++ b/Desktop/TP7_NFA040_MB/style.css
@@ -6,9 +6,24 @@ body {
 }
 
 .box {
+  float: right;
+  margin: 15px;
   width: 150px;
   height: 100px;
   border-radius: 5px;
   background-color: rgb(207, 232, 220);
   padding: 1em;
+}
+
+.special {
+  background-color: rgb(79, 185, 227);
+  padding: 10px;
+  color: #fff;
+}
+
+.wrapper {
+  background-color: rgb(79, 185, 227);
+  padding: 10px;
+  color: #fff;
+  display: flow-root;
 }
